--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container collapse navbar-collapse"> 
-            <a href="simples.html"><img class="navbar-brand" src="./img/home_page/logo.png" alt="LOGOTIPO"></a>
+            <a href="index.html"><img class="navbar-brand" src="./img/home_page/logo.png" alt="LOGOTIPO"></a>
             <form class="navbar d-flax">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="simples.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="simple3.html">Beneficios</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Contato</a></li>
                     <li class="nav-item"><a href="simples2.html" class="btn btn-outline-light">Entar</a></li>
@@ -123,9 +123,9 @@
         <div class="row">
             <div class="col-md-8 ">
                 <p>
-                    <a href="#">home</a>
-                    <a href="#">Benefícios</a>
-                    <a href="#">Contato</a>
+                    <a href="index.html">home</a>
+                    <a href="simple3.html">Benefícios</a>
+                    
                 </p>
             </div>
             <div class="col-md-4 d-flex justify-content-end">
