--- a/simples2.html
+++ b/simples2.html
@@ -11,10 +11,10 @@
 <body style="background-image: url(./img/login_page/Background.png);">
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container collapse navbar-collapse"> 
-            <a href="simples.html"><img class="navbar-brand" src="./img/home_page/logo.png" alt="LOGOTIPO"></a>
+            <a href="index.html"><img class="navbar-brand" src="./img/home_page/logo.png" alt="LOGOTIPO"></a>
             <form class="navbar d-flax">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="simples.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="simple3.html">Beneficios</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Contato</a></li>
                     <li class="nav-item"><a href="simples2.html" class="btn btn-outline-light">Entar</a></li>
@@ -34,6 +34,7 @@
                     <input type="text" placeholder="Insira seu nome de usuario" class="form-control">
                     <p style="margin-top: 30px;">Senha:</p>
                     <input style="margin-bottom: 15px;" type="text" placeholder="Insira sua senha" class="form-control">
+                    <a style="margin-top: 30px;" class="btn btn-primary" id="botao_cadastre_se" href="">Entrar</a>
                     <p style="margin-top: 40px;">Se não possuir uma conta.</p>
                     <a href="simples4.html"><p>cadastre-se Aqui</p></a>
                 </div>
