--- a/simples4.html
+++ b/simples4.html
@@ -11,10 +11,10 @@
 <body style="background-image: url(./img/login_page/Background.png);">
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container collapse navbar-collapse"> 
-            <a href="simples.html"><img class="navbar-brand" src="./img/home_page/logo.png" alt="LOGOTIPO"></a>
+            <a href="index.html"><img class="navbar-brand" src="./img/home_page/logo.png" alt="LOGOTIPO"></a>
             <form class="navbar d-flax">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="simples.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="simple3.html">Beneficios</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Contato</a></li>
                     <li class="nav-item"><a href="simples2.html" class="btn btn-outline-light">Entar</a></li>
